sua loi ket noi csdl

--- a/QuanLyDiemSinhVien/DTO/DTO.csproj
+++ b/QuanLyDiemSinhVien/DTO/DTO.csproj
@@ -114,6 +114,7 @@
     <Compile Include="TaiKhoang.cs">
       <DependentUpon>QLDiemSinhVien.tt</DependentUpon>
     </Compile>
+    <Compile Include="text.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
