--- a/QuanLyDiemSinhVien/DTO/App.config
+++ b/QuanLyDiemSinhVien/DTO/App.config
@@ -10,6 +10,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="QLDiemSinhVien" connectionString="metadata=res://*/QLDiemSinhVien.csdl|res://*/QLDiemSinhVien.ssdl|res://*/QLDiemSinhVien.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=laptop-oumk55pl\sqlexpress;initial catalog=QLDiemSinhVien;integrated security=True;multiple active result sets=True;application name=EntityFramework;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="QLDiemSinhVien" connectionString="metadata=res://*/QLDiemSinhVien.csdl|res://*/QLDiemSinhVien.ssdl|res://*/QLDiemSinhVien.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=laptop-oumk55pl\sqlexpress;initial catalog=QLDiemSinhVien;integrated security=True;application name=EntityFramework;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
